--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -1,12 +1,10 @@
-cargo-features = ["edition"]
-
 [package]
 name = "kernel"
 version = "0.1.0"
 authors = ["Ben Navetta <ben.navetta@gmail.com>"]
-edition = "2018"
 
 [dependencies]
+dbg = { path = "../dbg" }
 bootloader_precompiled = "0.2.0"
 
 [package.metadata.bootimage]
