--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -2,10 +2,14 @@
 name = "kernel"
 version = "0.1.0"
 authors = ["Ben Navetta <ben.navetta@gmail.com>"]
+edition = "2018"
 
 [dependencies]
 dbg = { path = "../dbg" }
-bootloader_precompiled = "0.2.0"
+kutil = { path = "../kutil" }
+bootloader_precompiled = "~0.3"
+raw-cpuid = "~6.1"
+x86_64 = "~0.3"
 
 [package.metadata.bootimage]
 default-target = "x86_64-os.json"
