--- a/kutil/Cargo.toml
+++ b/kutil/Cargo.toml
@@ -1,9 +1,7 @@
 [package]
-name = "dbg"
+name = "kutil"
 version = "0.1.0"
 authors = ["Ben Navetta <ben.navetta@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-uart_16550 = "0.1.0"
-spin = "~0.4"
