--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -7,10 +7,20 @@ edition = "2018"
 [dependencies]
 kutil = { path = "../kutil" }
 serial_logger = { path = "../serial_logger" }
+bit_field = "~0.9.0"
 log = "~0.4.6"
-bootloader = "~0.6"
 raw-cpuid = "~6.1"
+spin = "~0.5"
 x86_64 = "~0.3"
+
+[dependencies.bootloader]
+version = "~0.6"
+features = ["map_physical_memory"]
+
+[dependencies.intrusive-collections]
+version = "~0.7.8"
+default-features = false
+features = ["nightly"]
 
 [package.metadata.bootimage]
 default-target = "x86_64-os.json"
