--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -24,3 +24,5 @@ features = ["nightly"]
 
 [package.metadata.bootimage]
 default-target = "x86_64-os.json"
+test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "mon:stdio"]
+test-success-exit-code = 33         # (0x10 << 1) | 1
