--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -11,6 +11,7 @@ bit_field = "~0.9.0"
 log = "~0.4.6"
 raw-cpuid = "~6.1"
 spin = "~0.5"
+volatile = "~0.2.6"
 x86_64 = "~0.3"
 
 [dependencies.bootloader]
@@ -27,6 +28,10 @@ features = ["map_physical_memory"]
 version = "~0.7.8"
 default-features = false
 features = ["nightly"]
+
+[dependencies.ux]
+version = "~0.1.3"
+default-features = false
 
 [package.metadata.bootimage]
 default-target = "x86_64-os.json"
