--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -19,11 +19,10 @@ x86_64 = "~0.6"
 version = "~0.6"
 features = ["map_physical_memory"]
 
-# AtomicCell might be useful
-#[dependencies.crossbeam-utils]
-#version = "~0.6.5"
-#default-features = false
-#features = ["nightly"]
+[dependencies.crossbeam-utils]
+version = "~0.6.5"
+default-features = false
+features = ["nightly"]
 
 [dependencies.intrusive-collections]
 version = "~0.7.8"
