--- a/apic/Cargo.toml
+++ b/apic/Cargo.toml
@@ -5,6 +5,8 @@ authors = ["Ben Navetta <ben.navetta@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-kutil = { path = "../kutil" }
 x86_64 = "~0.7.0"
-bit_field = "~0.9.0"
+bit_field = "~0.10.0"
+raw-cpuid = "~6.1"
+spin = "~0.5"
+log = "~0.4.6"
