--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -26,6 +26,10 @@ version = "~0.6.5"
 default-features = false
 features = ["nightly"]
 
+[dependencies.hashbrown]
+version = "0.4.0"
+features = ["nightly"]
+
 [dependencies.intrusive-collections]
 version = "~0.7.8"
 default-features = false
@@ -42,6 +46,7 @@ default-features = false
 
 [package.metadata.bootimage]
 default-target = "x86_64-os.json"
-run-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "mon:stdio"]
+#run-args = ["-accel", "hvf", "-cpu", "host,migratable=no", "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "mon:stdio"]
+run-args = ["-cpu", "max,migratable=no", "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "mon:stdio"]
 test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "mon:stdio"]
 test-success-exit-code = 33         # (0x10 << 1) | 1
