--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Ben Navetta <ben.navetta@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+acpi = { git = "https://github.com/bnavetta/acpi.git" }
 apic = { path = "../apic" }
 kutil = { path = "../kutil" }
 serial_logger = { path = "../serial_logger" }
@@ -46,7 +47,7 @@ default-features = false
 
 [package.metadata.bootimage]
 default-target = "x86_64-os.json"
-run-args = ["-cpu", "max", "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "mon:stdio"]
+run-args = ["-cpu", "max", "-smp", "cores=4", "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "mon:stdio"]
 #run-args = ["-accel", "hvf", "-cpu", "host,migratable=no", "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "mon:stdio"]
 #run-args = ["-machine", "accel=kvm", "-cpu", "host,migratable=no", "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "mon:stdio"]
 test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "mon:stdio"]
