--- a/platypos_config/Cargo.toml
+++ b/platypos_config/Cargo.toml
@@ -1,16 +1,16 @@
 [package]
-name = "kernel_core"
+name = "platypos_config"
 version = "0.1.0"
-description = "Platform-independent core of PlatypOS"
 authors = ["Ben Navetta <ben.navetta@gmail.com>"]
+description = "Build-time configuration for PlatypOS"
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-hal = { path = "../hal" }
-
-bit_field = "0.10"
-intrusive-collections = { version = "0.8", features = ["nightly"] }
 log = "0.4"
-spin = "0.5"
+phf = { version = "0.7", features = ["core"] }
+
+[build-dependencies]
+toml = "0.5"
+phf_codegen = "0.7"
