--- a/platypos_kernel/Cargo.toml
+++ b/platypos_kernel/Cargo.toml
@@ -1,16 +1,18 @@
 [package]
-name = "kernel_core"
+name = "platypos_kernel"
 version = "0.1.0"
-description = "Platform-independent core of PlatypOS"
 authors = ["Ben Navetta <ben.navetta@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-hal = { path = "../hal" }
+platypos_pal = { path = "../platypos_pal" }
 
-bit_field = "0.10"
+bit_field = "0.10.0"
 intrusive-collections = { version = "0.8", features = ["nightly"] }
 log = "0.4"
 spin = "0.5"
+
+[target.'cfg(target_arch = "x86_64")'.dependencies]
+platypos_platform_x86_64 = { path = "../platypos_platform_x86_64" }
