--- a/platypos_config/Cargo.toml
+++ b/platypos_config/Cargo.toml
@@ -12,5 +12,6 @@ log = "0.4"
 phf = { version = "0.7", features = ["core"] }
 
 [build-dependencies]
-toml = "0.5"
 phf_codegen = "0.7"
+serde = { version = "1.0", features = ["derive"] }
+toml = "0.5"
