--- a/platypos_kernel/Cargo.toml
+++ b/platypos_kernel/Cargo.toml
@@ -14,5 +14,10 @@ intrusive-collections = { version = "0.8", features = ["nightly"] }
 log = "0.4"
 spin = "0.5"
 
+platypos_test = { path = "../platypos_test", optional = true }
+
 [target.'cfg(target_arch = "x86_64")'.dependencies]
 platypos_platform_x86_64 = { path = "../platypos_platform_x86_64" }
+
+[features]
+testing = ["platypos_test"]
