--- a/platypos_test/macro/Cargo.toml
+++ b/platypos_test/macro/Cargo.toml
@@ -1,13 +1,16 @@
 [package]
-name = "platypos_pal"
+name = "platypos_test_macro"
 version = "0.1.0"
 authors = ["Ben Navetta <ben.navetta@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dependencies]
-platypos_test = { path = "../platypos_test", optional = true }
+[lib]
+proc-macro = true
 
-[features]
-test = ["platypos_test"]
+[dependencies]
+heck = "0.3"
+proc-macro2 = "0.4"
+quote = "0.6"
+syn = { version = "0.15", features = ["full"] }
