--- a/platypos_kernel/Cargo.toml
+++ b/platypos_kernel/Cargo.toml
@@ -14,10 +14,13 @@ intrusive-collections = { version = "0.8", features = ["nightly"] }
 log = "0.4"
 spin = "0.5"
 
-platypos_test = { path = "../platypos_test", optional = true }
-
 [target.'cfg(target_arch = "x86_64")'.dependencies]
 platypos_platform_x86_64 = { path = "../platypos_platform_x86_64" }
 
-[features]
-testing = ["platypos_test"]
+[dev-dependencies]
+bootloader = "0.6" # Needed for bootimage when running tests
+platypos_test = { path = "../platypos_test" }
+
+[package.metadata.bootimage]
+test-args = ["-smp", "cores=2", "-serial", "mon:stdio", "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
+test-success-exit-code = 33
