--- a/platypos_kernel/Cargo.toml
+++ b/platypos_kernel/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+apic = { path = "../apic" }
 platypos_config = { path = "../platypos_config" }
 
 arr_macro = "0.1"
@@ -17,6 +18,7 @@ spin = "0.5"
 
 [target.'cfg(target_arch = "x86_64")'.dependencies]
 bootloader = { version = "0.6", features = ["map_physical_memory"] }
+#bootloader = { path = "/Users/ben/src/bootloader", features = ["map_physical_memory"] }
 x86_64 = "0.7"
 serial_logger = { path = "../serial_logger" }
 
