--- a/.cargo/config
+++ b/.cargo/config
@@ -1,5 +1,5 @@
-[build]
-target = "platypos_kernel/x86_64-os.json"
+#[build]
+#target = "platypos_kernel/x86_64-os.json"
 
 [target.'cfg(target_os = "none")']
 runner = "bootimage runner"
