--- a/Makefile.toml
+++ b/Makefile.toml
@@ -85,9 +85,22 @@ args = [
 
     # Redirect the serial port to stdout
     # OVMF will also redirect UFI stdout to this
-    "-serial", "stdio",
+#    "-serial", "stdio",
 
-    "-d", "cpu_reset"
+    # Create 2 serial ports - OVMF will use one for debug output, and the kernel will use the other for logging
+    # QEMU will print out the two PTYs created, which `screen` can connect to
+    "-serial", "pty",
+    "-serial", "pty",
+
+    "-monitor", "stdio",
+
+    # "-d", "cpu_reset,int,pcall,guest_errors,page",
+    # "-d", "cpu_reset,int,guest_errors",
+    "-d", "cpu_reset,guest_errors",
+
+    "-S"
+
+    # "-S", "-s"
 ]
 
 # Tasks for installing tools / build dependencies
