--- a/Makefile.toml
+++ b/Makefile.toml
@@ -85,22 +85,24 @@ args = [
 
     # Redirect the serial port to stdout
     # OVMF will also redirect UFI stdout to this
-#    "-serial", "stdio",
+    "-serial", "stdio",
 
-    # Create 2 serial ports - OVMF will use one for debug output, and the kernel will use the other for logging
-    # QEMU will print out the two PTYs created, which `screen` can connect to
-    "-serial", "pty",
-    "-serial", "pty",
+    # Create a PTY for the QEMU monitor, which allows controlling the VM
+    "-monitor", "pty",
 
-    "-monitor", "stdio",
+#    # Create 2 serial ports - OVMF will use one for debug output, and the kernel will use the other for logging
+#    # QEMU will print out the two PTYs created, which `screen` can connect to
+#    "-serial", "pty",
+#    "-serial", "pty",
+
+#    "-monitor", "stdio",
 
     # "-d", "cpu_reset,int,pcall,guest_errors,page",
     # "-d", "cpu_reset,int,guest_errors",
     "-d", "cpu_reset,guest_errors",
 
-    "-S"
-
-    # "-S", "-s"
+     "-S", "-s",
+     "-m", "256"
 ]
 
 # Tasks for installing tools / build dependencies
