--- a/platypos_kernel/Cargo.toml
+++ b/platypos_kernel/Cargo.toml
@@ -20,6 +20,7 @@ spin = "0.5"
 bootloader = { version = "0.6", features = ["map_physical_memory"] }
 #bootloader = { path = "/Users/ben/src/bootloader", features = ["map_physical_memory"] }
 x86_64 = "0.7"
+volatile = "0.2"
 serial_logger = { path = "../serial_logger" }
 
 [dev-dependencies]
