Passing boot info from UEFI loader to kernel

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
 	"serial_logger",
 
     "platypos_loader",
+    "platypos_boot_info",
     "platypos_config",
 	"platypos_kernel",
 	"platypos_test",
