--- a/platypos_loader/Cargo.toml
+++ b/platypos_loader/Cargo.toml
@@ -16,6 +16,7 @@ uefi-services = { git = "https://github.com/bnavetta/uefi-rs", branch = "master"
 uefi-exts = { git = "https://github.com/bnavetta/uefi-rs", branch = "master" }
 uart_16550 = "~0.2.0"
 x86_64 = "0.7"
+platypos_boot_info = { path = "../platypos_boot_info" }
 
 [features]
 qemu = ["uefi-services/qemu"]
