--- a/platypos_kernel/Cargo.toml
+++ b/platypos_kernel/Cargo.toml
@@ -20,6 +20,7 @@ spin = "0.5"
 x86_64 = "0.7"
 volatile = "0.2"
 serial_logger = { path = "../serial_logger" }
+platypos_boot_info = { path = "../platypos_boot_info" }
 
 [dev-dependencies]
 platypos_test = { path = "../platypos_test" }
