--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Ben Navetta <ben.navetta@gmail.com>"]
 edition = "2018"
 
 [target.'cfg(target_arch = "x86_64")'.dependencies]
+uart_16550 = "0.2"
 x86_64 = "0.10"
 
 [package.metadata.cargo-xbuild]
