--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -4,9 +4,20 @@ version = "0.0.1"
 authors = ["Ben Navetta <ben.navetta@gmail.com>"]
 edition = "2018"
 
+[dependencies]
+slog_kernel = { path = "../slog_kernel" }
+
+[dependencies.slog]
+version = "2.5"
+default-features = false
+
+[dependencies.spinning_top]
+version = "0.1"
+features = ["nightly"]
+
 [target.'cfg(target_arch = "x86_64")'.dependencies]
-uart_16550 = "0.2"
 x86_64 = "0.10"
+x86_64_ext = { path = "../x86_64_ext" }
 
 [package.metadata.cargo-xbuild]
 memcpy = true
