--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -7,6 +7,10 @@ edition = "2018"
 [dependencies]
 slog_kernel = { path = "../slog_kernel" }
 
+[dependencies.conquer-once]
+version = "0.2"
+default-features = false
+
 [dependencies.slog]
 version = "2.5"
 default-features = false
