--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Ben Navetta <ben.navetta@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+platypos_boot_info = { path = "../boot_info" }
 slog_kernel = { path = "../slog_kernel" }
 
 [dependencies.conquer-once]
