Rust launcher/builder cli

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,11 @@
 [workspace]
 members = [
-    "loader",
     "kernel",
     "boot_info",
     "slog_kernel",
-    "x86_64_ext"
+    "x86_64_ext",
+
+    "pos_cli",
+    "kernel_x86_64",
+    "loader_uefi"
 ]
