--- a/kernel_x86_64/Cargo.toml
+++ b/kernel_x86_64/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "x86_64_ext"
-version = "0.0.1"
+name = "platypos_kernel_x86_64"
+version = "0.1.0"
 authors = ["Ben Navetta <ben.navetta@gmail.com>"]
-description = "Extensions to the x86_64 crate"
 edition = "2018"
 
 [dependencies]
+rlibc = "1.0.0"
 x86_64 = "0.11"
