--- a/loader_uefi/Cargo.toml
+++ b/loader_uefi/Cargo.toml
@@ -1,19 +1,16 @@
 [package]
-name = "platypos_loader"
-version = "0.0.1"
+name = "platypos_loader_uefi"
+version = "0.1.0"
 authors = ["Ben Navetta <ben.navetta@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-platypos_boot_info = { path = "../boot_info" }
 goblin = { version = "0.2", default-features = false, features = ["elf64"] }
 log = { version = "0.4", default-features = false }
 plain = "0.2"
+rlibc = "1.0"
 uart_16550 = "0.2"
-uefi = "0.4"
+uefi = "0.5"
 uefi-services = "0.2"
-x86_64 = "0.10"
+x86_64 = "0.11"
 x86_64_ext = { path = "../x86_64_ext" }
-
-[package.metadata.cargo-xbuild]
-memcpy = true
