--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -1,29 +1,14 @@
 [package]
 name = "platypos_kernel"
-version = "0.0.1"
+version = "0.1.0"
 authors = ["Ben Navetta <ben.navetta@gmail.com>"]
 edition = "2018"
 
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
 [dependencies]
-intrusive-collections = "0.9"
-platypos_boot_info = { path = "../boot_info" }
-slog_kernel = { path = "../slog_kernel" }
+platypos_pal = { path = "../pal" }
 
-[dependencies.conquer-once]
-version = "0.2"
+[dependencies.log]
+version = "0.4"
 default-features = false
-
-[dependencies.slog]
-version = "2.5"
-default-features = false
-
-[dependencies.spinning_top]
-version = "0.1"
-features = ["nightly"]
-
-[target.'cfg(target_arch = "x86_64")'.dependencies]
-x86_64 = "0.10"
-x86_64_ext = { path = "../x86_64_ext" }
-
-[package.metadata.cargo-xbuild]
-memcpy = true
