--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+intrusive-collections = "0.9"
+spinning_top = "0.2"
 platypos_pal = { path = "../pal" }
 
 [dependencies.log]
