--- a/pal/Cargo.toml
+++ b/pal/Cargo.toml
@@ -5,3 +5,8 @@ authors = ["Ben Navetta <ben.navetta@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+bitflags = "1.2"
+
+[dependencies.arrayvec]
+version = "0.5"
+default-features = false
