--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -8,4 +8,8 @@ edition = "2018"
 
 [dependencies]
 tracing = { version = "0.1.23", default-features = false }
+uart_16550 = "0.2.12"
 x86_64 = "0.13.2"
+
+[features]
+gdb = []
