--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -7,8 +7,12 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tracing = { version = "0.1.23", default-features = false }
-uart_16550 = "0.2.12"
+ansi_rgb = "0.2.0"
+arrayvec = { version = "0.5.2", default-features = false, features = ["unstable-const-fn"] }
+spinning_top = { version = "0.2.2", features = ["nightly"] }
+tracing = { git = "https://github.com/tokio-rs/tracing", default-features = false }
+tracing-core = { git = "https://github.com/tokio-rs/tracing", default-features = false }
+uart_16550 = { version = "0.2.12", features = ["nightly"] }
 x86_64 = "0.13.2"
 
 [features]
