--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -16,3 +16,12 @@ riscv = { git = "https://github.com/rust-embedded/riscv.git", rev = "be2927e248c
 [dependencies.fdt-rs]
 version = "0.4"
 default-features = false
+
+[profile.dev]
+panic = "abort"
+
+[profile.release]
+panic = "abort"
+lto = "thin"
+debug = true
+split-debuginfo = "packed"
