--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -2,19 +2,23 @@
 name = "platypos_kernel"
 version = "0.1.0"
 authors = ["Ben Navetta <ben.navetta@gmail.com>"]
-edition = "2018"
+edition = "2021"
+publish = false
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 ansi_rgb = "0.2.0"
-lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
-riscv = { git = "https://github.com/rust-embedded/riscv.git", rev = "be2927e248c11bb3c745f01162ba8828a79ec569" }
 arrayvec = { version = "0.7.1", default-features = false }
+bitvec = { version = "0.22.3", default-features = false, features = ["atomic"] }
+intrusive-collections = {version = "0.9.2", default-features = false }
+lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
 lock_api = { version = "0.4.5", features = ["nightly"] }
 log = { version = "0.4.14", features = ["max_level_trace"] }
 owo-colors = "3.0.1"
+riscv = { git = "https://github.com/rust-embedded/riscv.git", rev = "be2927e248c11bb3c745f01162ba8828a79ec569" }
 tracing = { version = "0.1.29", default-features = false, features = ["attributes", "max_level_trace"] }
+bitflags = "1.3.2"
 
 [dependencies.fdt-rs]
 version = "0.4"
