--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -7,4 +7,6 @@ description = "Core PlatypOS kernel"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+az = "1.2.0"
+embedded-graphics = "0.7.1"
 platypos_platform = { path = "../platform" }
