--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -9,4 +9,11 @@ description = "Core PlatypOS kernel"
 [dependencies]
 az = "1.2.0"
 embedded-graphics = "0.7.1"
+log = { version = "0.4.16", features = [
+    "kv_unstable",
+    "kv_unstable_sval",
+    "max_level_trace",
+    "release_max_level_debug",
+], default-features = false }
 platypos_platform = { path = "../platform" }
+spin = { version = "0.9.2", features = ["mutex", "once"] }
