--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 cargo-features = ["profile-rustflags"]
 
 [workspace]
-members = ["platform", "platform_common", "kernel", "kernel_x86_64", "xtask"]
+members = ["kernel", "xtask"]
 
 # [profile.dev]
 # # For backtraces
