--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -15,5 +15,9 @@ log = { version = "0.4.16", features = [
     "max_level_trace",
     "release_max_level_debug",
 ], default-features = false }
-platypos_platform = { path = "../platform" }
 spin = { version = "0.9.2", features = ["mutex", "once"] }
+
+[target.'cfg(target_arch = "x86_64")'.dependencies]
+bootloader = "0.10.12"
+uart_16550 = "0.2.17"
+x86_64 = "0.14.8"
