--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -12,12 +12,17 @@ bitvec = { version = "1.0.0", features = ["atomic"], default-features = false }
 embedded-graphics = "0.7.1"
 itertools = { version = "0.10.3", default-features = false }
 log = { version = "0.4.16", features = [
-    "kv_unstable",
-    "kv_unstable_sval",
+    # "kv_unstable",
+    # "kv_unstable_sval",
     "max_level_trace",
     "release_max_level_debug",
 ], default-features = false }
+mini-backtrace = "0.1"
 spin = { version = "0.9.2", features = ["mutex", "once"] }
+
+[[bin]]
+name = "platypos_kernel"
+harness = false
 
 [target.'cfg(target_arch = "x86_64")'.dependencies]
 bootloader = "0.10.12"
