--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -7,11 +7,15 @@ description = "Tools for building PlatypOS"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+addr2line = "0.17"
 bootloader-locator = "0.0.4"
 camino = "1.0.7"
 cargo_metadata = "0.15"
-clap = { version = "3.0.13", features = ["derive"] }
+clap = { version = "3.0.13", features = ["derive", "env"] }
 color-eyre = "0.6.1"
 enable-ansi-support = "0.1.2"
+lazy_static = "1.4"
+log = { version = "0.4", features = ["std"] }
 owo-colors = { version = "3.3.0", features = ["supports-colors"] }
+regex = "1.5"
 supports-color = "1.3.0"
