--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -18,6 +18,9 @@ log = { version = "0.4.16", features = [
 ], default-features = false }
 mini-backtrace = "0.1"
 spin = { version = "0.9.2", features = ["mutex", "once"] }
+linked_list_allocator = { version = "0.10.0", features = ["alloc_ref"] }
+static_assertions = "1.1.0"
+intrusive-collections = "0.9.4"
 
 [[bin]]
 name = "platypos_kernel"
@@ -27,3 +30,6 @@ harness = false
 bootloader = "0.10.12"
 uart_16550 = "0.2.17"
 x86_64 = "0.14.8"
+
+[package.metadata.bootloader]
+map-physical-memory = true
