--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@ cargo-features = ["profile-rustflags"]
 
 [workspace]
 resolver = "2"
-members = ["kernel", "xtask"]
+members = ["kernel", "ktest", "ktest/macros", "xtask"]
 
 # [profile.dev]
 # # For backtraces
