--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -22,6 +22,9 @@ linked_list_allocator = { version = "0.10.0", features = ["alloc_ref"] }
 static_assertions = "1.1.0"
 intrusive-collections = "0.9.4"
 
+[dev-dependencies]
+ktest = { path = "../ktest" }
+
 [[bin]]
 name = "platypos_kernel"
 harness = false
