--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -12,10 +12,8 @@ ansi_rgb = "0.2"
 bitvec = { version = "1.0.0", features = ["atomic"], default-features = false }
 embedded-graphics = "0.7.1"
 itertools = { version = "0.10.3", default-features = false }
-log = { version = "0.4.16", features = [
-    "max_level_trace",
-    "release_max_level_debug",
-], default-features = false }
+# defmt = { version = "0.3", features = ["encoding-raw"] }
+defmt = "0.3"
 mini-backtrace = "0.1"
 spin = { version = "0.9.2", features = ["mutex", "once"] }
 linked_list_allocator = { version = "0.10.0", features = ["alloc_ref"] }
