--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -8,12 +8,13 @@ description = "Core PlatypOS kernel"
 
 [dependencies]
 az = "1.2.0"
-ansi_rgb = "0.2"
 bitvec = { version = "1.0.0", features = ["atomic"], default-features = false }
 embedded-graphics = "0.7.1"
 itertools = { version = "0.10.3", default-features = false }
 # defmt = { version = "0.3", features = ["encoding-raw"] }
-defmt = "0.3"
+defmt = { version = "0.3", path = "../defmt/defmt", features = [
+    "encoding-raw",
+] }
 mini-backtrace = "0.1"
 spin = { version = "0.9.2", features = ["mutex", "once"] }
 linked_list_allocator = { version = "0.10.0", features = ["alloc_ref"] }
