--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,13 @@ resolver = "2"
 members = ["kernel", "ktest", "ktest/macros", "xtask"]
 exclude = ["defmt", "addr2line"]
 
+[profile.dev]
+lto = "thin"
+
+[profile.release]
+lto = "thin"
+debug = true
+
 # [profile.dev]
 # # For backtraces
 # rustflags = ["-Cforce-frame-pointers"]
