--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -15,14 +15,14 @@ itertools = { version = "0.10.3", default-features = false }
 defmt = { version = "0.3", path = "../defmt/defmt", features = [
     "encoding-raw",
 ] }
+ktest = { path = "../ktest" }
+linkme = "0.3"
 mini-backtrace = "0.1"
 spin = { version = "0.9.2", features = ["mutex", "once"] }
 linked_list_allocator = { version = "0.10.0", features = ["alloc_ref"] }
 static_assertions = "1.1.0"
 intrusive-collections = "0.9.4"
 
-[dev-dependencies]
-ktest = { path = "../ktest" }
 
 [[bin]]
 name = "platypos_kernel"
