--- a/ktest/Cargo.toml
+++ b/ktest/Cargo.toml
@@ -7,7 +7,6 @@ description = "Kernel unit test harness"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ansi_rgb = "0.2"
+defmt = { version = "0.3", path = "../defmt/defmt" }
 linkme = "0.3"
 qemu-exit = "3.0"
-spin = { version = "0.9.2", features = ["mutex"] }
