Switch from defmt to tracing
Hooking into defmt's formatting et nded up being surprisingly painful, and
having structured output is nice. With tracing, we can still use binary
serialization and reconstruct the span tree on the host. This also
avoids complicated linker things.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,15 @@ cargo-features = ["profile-rustflags"]
 
 [workspace]
 resolver = "2"
-members = ["kernel", "ktest", "ktest/macros", "xtask"]
+members = [
+    "kernel",
+    "ktest",
+    "ktest/macros",
+    "xtask",
+    "ktrace",
+    "ktrace/proto",
+    "ktrace/decoder",
+]
 exclude = ["defmt", "addr2line", "linkme"]
 
 [profile.dev]
