--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -9,16 +9,17 @@ description = "Core PlatypOS kernel"
 [dependencies]
 az = "1.2.0"
 bitvec = { version = "1.0.0", features = ["atomic"], default-features = false }
+ciborium-io = "0.2"
 embedded-graphics = "0.7.1"
 itertools = { version = "0.10.3", default-features = false }
-# defmt = { version = "0.3", features = ["encoding-raw"] }
-defmt = { version = "0.3", path = "../defmt/defmt", features = [
-    "encoding-raw",
-] }
 ktest = { path = "../ktest" }
 linkme = { version = "0.3", path = "../linkme" }
 mini-backtrace = "0.1"
+platypos_ktrace = { path = "../ktrace" }
 spin = { version = "0.9.2", features = ["mutex", "once"] }
+tracing = { version = "0.1", default-features = false, features = [
+    "attributes",
+] }
 linked_list_allocator = { version = "0.10.0", features = ["alloc_ref"] }
 static_assertions = "1.1.0"
 intrusive-collections = "0.9.4"
