--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -12,17 +12,11 @@ bootloader-locator = "0.0.4"
 camino = "1.0.7"
 cargo_metadata = "0.15"
 clap = { version = "3.0.13", features = ["derive", "env"] }
-defmt-decoder = { version = "0.3", features = [
-    "unstable",
-], path = "../defmt/decoder" }
-defmt-parser = { version = "0.3", features = [
-    "unstable",
-], path = "../defmt/parser" }
 color-eyre = "0.6.1"
 enable-ansi-support = "0.1.2"
 lazy_static = "1.4"
 log = { version = "0.4", features = ["std"] }
 owo-colors = { version = "3.3.0", features = ["supports-colors"] }
+platypos_ktrace_decoder = { path = "../ktrace/decoder" }
 supports-color = "1.3.0"
 duct = "0.13.5"
-memchr = "2.5.0"
