--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -17,6 +17,7 @@ linkme = { version = "0.3", path = "../linkme" }
 mini-backtrace = "0.1"
 platypos_ktrace = { path = "../ktrace" }
 spin = { version = "0.9.2", features = ["mutex", "once"] }
+sptr = "0.3"
 tracing = { version = "0.1", default-features = false, features = [
     "attributes",
 ] }
