feat(ktrace)!: Streaming trace serialization
This serializes trace messages directly, rather than using CBOR, so they
can be written without additional buffering. This means there's no
maximum message size. Instead, the host reads more data if `postcard`
reports that it doesn't have enough to continue.

This also fixes a bug where 8-character messages would not serialize
properly, due to escaping in the serial port driver.

--- a/ktrace/proto/Cargo.toml
+++ b/ktrace/proto/Cargo.toml
@@ -8,4 +8,7 @@ description = "Serialization protocol for PlatypOS KTrace data"
 postcard = "1.0"
 phf = { version = "0.10", default-features = false, features = ["macros"] }
 serde = { version = "1.0", default-features = false, features = ["derive"] }
-tracing-core = { version = "0.1", default-features = false }
+tracing = { version = "0.1", default-features = false }
+
+[features]
+std = []
