--- a/ktrace/decoder/Cargo.toml
+++ b/ktrace/decoder/Cargo.toml
@@ -11,6 +11,6 @@ color-eyre = "0.6.1"
 log = { version = "0.4", default-features = false }
 memchr = "2.5.0"
 owo-colors = { version = "3.3.0", features = ["supports-colors"] }
-platypos_ktrace_proto = { path = "../proto" }
+platypos_ktrace_proto = { path = "../proto", features = ["std"] }
 postcard = "1.0"
 serde = "1.0"
