--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -14,6 +14,8 @@ embedded-graphics = "0.7.1"
 itertools = { version = "0.10.3", default-features = false }
 ktest = { path = "../ktest" }
 mini-backtrace = "0.1"
+platypos_common = { path = "../common" }
+platypos_hal = { path = "../hal" }
 platypos_ktrace = { path = "../ktrace" }
 spin = { version = "0.9.2", features = ["mutex", "once"] }
 sptr = "0.3"
@@ -31,7 +33,7 @@ harness = false
 
 [target.'cfg(target_arch = "x86_64")'.dependencies]
 bootloader = "0.10.12"
-uart_16550 = "0.2.17"
+platypos_hal_x86_64 = { path = "../hal-x86_64" }
 x86_64 = "0.14.8"
 
 [package.metadata.bootloader]
