--- a/ktrace/Cargo.toml
+++ b/ktrace/Cargo.toml
@@ -10,7 +10,8 @@ description = "Kernel tracing implementation for PlatypOS"
 ciborium-io = "0.2"
 hash32 = "0.2.1"
 heapless = "0.7"
+platypos_common = { path = "../common" }
 platypos_ktrace_proto = { path = "./proto" }
+platypos_hal = { path = "../hal" }
 postcard = "1.0"
-spin = { version = "0.9.2", features = ["mutex", "once"] }
 tracing-core = { version = "0.1", default-features = false }
