--- a/hal-x86_64/Cargo.toml
+++ b/hal-x86_64/Cargo.toml
@@ -7,7 +7,12 @@ description = "HAL implementation for x86-64"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bitvec = { version = "1.0", default-features = false }
 platypos_common = { path = "../common" }
 platypos_hal = { path = "../hal" }
+raw-cpuid = "10.4"
+tracing = { version = "0.1", default-features = false, features = [
+    "attributes",
+] }
 uart_16550 = "0.2.17"
 x86_64 = "0.14.8"
