--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ members = [
     "ktrace",
     "ktrace/proto",
     "ktrace/decoder",
+    "slab",
 ]
 exclude = ["defmt", "addr2line", "linkme"]
 
