--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -7,13 +7,13 @@ description = "Tools for building PlatypOS"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-addr2line = { version = "0.18" }
-bootloader-locator = "0.0.4"
+addr2line = { version = "0.19" }
+bootloader = "0.11"
 camino = "1.0.7"
 cargo_metadata = "0.15"
-clap = { version = "3.0.13", features = ["derive", "env"] }
+clap = { version = "4", features = ["derive", "env"] }
 color-eyre = "0.6.1"
-enable-ansi-support = "0.1.2"
+enable-ansi-support = "0.2"
 lazy_static = "1.4"
 log = { version = "0.4", features = ["std"] }
 owo-colors = { version = "3.3.0", features = ["supports-colors"] }
