feat: v1 of concurrent slab

--- a/slab/Cargo.toml
+++ b/slab/Cargo.toml
@@ -8,4 +8,4 @@ description = "Lock-free concurrent slab for PlatypOS"
 platypos_hal = { path = "../hal" }
 
 [target.'cfg(loom)'.dependencies]
-loom = "0.5"
+loom = { version = "0.5", features = ["checkpoint"] }
