feat(internal): use proper bitfield type for cleaner code and race condition handling

--- a/slab/Cargo.toml
+++ b/slab/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 description = "Lock-free concurrent slab for PlatypOS"
 
 [dependencies]
+modular-bitfield = "0.11.2"
 platypos_hal = { path = "../hal" }
 
 [target.'cfg(loom)'.dependencies]
