Fixes on the road to updating tracing
* Stash the trace I/O worker so we can still get logs on `panic`
* Fix up a few compile errors from the `bootloader` upgrade
* Document the HAL, plus some ideas about making it work better
* First pass at using `platypos_slab` for ktrace
* Add linker flags that were lost when switching to the built-in bare
  metal x64 target

--- a/ktrace/Cargo.toml
+++ b/ktrace/Cargo.toml
@@ -12,8 +12,10 @@ hashbrown = { version = "0.13", default-features = false, features = [
     "ahash",
 ] }
 heapless = "0.7"
+platypos_common = { path = "../common" }
 platypos_ktrace_proto = { path = "./proto" }
 platypos_hal = { path = "../hal" }
+platypos_slab = { path = "../slab" }
 postcard = "1.0"
 serde = { version = "1.0", default-features = false }
 thingbuf = { version = "0.1", default-features = false, features = ["static"] }
